:lipstick: Design: 디자인 수정 마우스 호버 이펙트 모션 추가 드래그 금지 수정

--- a/Front/src/style.css
+++ b/Front/src/style.css
@@ -61,4 +61,8 @@ table {
 
 * {
   box-sizing: border-box;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
 }
