--- a/Front/src/style.css
+++ b/Front/src/style.css
@@ -12,6 +12,24 @@
   font-style: normal;
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: #dedede;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background:#8A8A8A;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background:#6F7070;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
